# tictactoe-minimax-algorithm

./: .gitignore  CMakeLists.txt  README.md  main.cc
game_engine/: game.cc  game.h
strategy/minimax/: minimax.cc  minimax.h
widget/board/: board.cc  board.h
widget/symbol/: symbol.h
